# Bookstore

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  test_token.py  teste.txt
.github/workflows/: ci.yml
Bookstore/: Dockerfile  asgi.py  settings.py  urls.py  wsgi.py
Bookstore/test/: test_viewsets.py
api_new/: apps.py  urls.py
api_new/migrations/: 0001_initial.py  0002_item_delete_category_remove_user_groups_and_more.py  0003_category_order_product.py
api_new/models/: __init__.py  category.py  item.py  order.py
api_new/serializers/: __init__.py  category_serializer.py  item_serializer.py  order_serializer.py  product_serializer.py
api_new/tests/: test_auth_token.py  test_item_serializer.py  test_item_viewsets.py
api_new/viewsets/: __init__.py  category_viewsets.py  item_viewsets.py  order_viewsets.py  product_viewsets.py
env_drf/: pyvenv.cfg
env_drf/Scripts/: activate  activate.bat  activate.fish  dul-receive-pack  dul-upload-pack
orders/: models.py  serializers.py  tests.py  tests_views.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_options_remove_order_date_and_more.py  0003_order_date_order_product_order_quantity.py
orders/models/: order.py
orders/serializers/: order_serializer.py
orders/tests/test_serializers/: test_order_serializer.py
orders/tests/test_viewsets/: test_order_viewset.py
products/: models.py  serializers.py  tests.py  tests_views.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py
products/models/: __init__.py
products/serializers/: product_serializer.py
products/tests/test_serializers/: test_product_serializer.py
products/tests/test_viewsets/: test_product_viewset.py
