[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["anderson <nobreanderson@hotmail.com>"]
readme = "README.md"

packages = [{ include = "Bookstore" }]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
django = ">=5.2.6,<6.0.0"
djangorestframework = ">=3.16.1,<4.0.0"
psycopg = {extras = ["binary"], version = "^3.2.10"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "Bookstore.settings"
python_files = ["tests.py", "test_*.py"]

